# COMPASS

./: .dockerignore  .env.example  .gitattributes  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  alembic.ini  docker-compose.yml  pyproject.toml  vault_seed.sh
.github/: pull_request_template.md
alembic/: env.py
alembic/versions/: 20260615_0001_initial_schema.py
backend/app/: __init__.py  audit.py  cache.py  config.py  db.py  main.py  schema.py  storage.py
backend/tests/: test_admin_phase10.py  test_auth_phase1.py  test_catalog_validate.py  test_dashboard_charts.py  test_dashboards_phase9.py  test_document_preview.py  test_documents_phase7.py  test_embedding_batching.py  test_frontend_pages_phase6.py  test_frontend_pages_phase7.py  test_frontend_widget_phase8.py  test_golden_dataset.py  test_golden_search_eval.py  test_ingestion_phase3.py  test_llm_fallbacks.py  test_phase2_seed.py  test_phase4_worker.py  test_retrieval_diversity.py  test_retrieval_phase5.py  test_scope_phase1.py  test_search_phase6.py  test_security_phase11.py  test_storage_phase7.py  test_widget_phase8.py
compass.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
data/: __init__.py
data/evals/: README.md  __init__.py  compass_golden_v1.json  golden.py
data/seed/: __init__.py  seed_demo.py  seed_synthetic_data.py  seed_users.py  synthetic_data.py
docs/: PRODUCTION_CHECKLIST.md
frontend/templates/: _icons.html  audit_log.html  base.html  dashboards.html  document_preview.html  login.html  manage_documents.html  manage_employees.html  manage_users.html  search.html
ingestion/: __init__.py  chunk.py  clean.py  cli.py  extract.py  pipeline.py
scripts/: check_no_string_sql.py
specs/001-compass/: brief.md  plan.md  (+5 more)
worker/: __init__.py  worker.py
(+52 files in other folders)
